# Rust-LLM-Inference-Gateway

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES_v1.0.0.md  docker-compose.yml
.github/workflows/: ci.yml
deploy/prometheus/: prometheus.yml
src/: auth.rs  batcher.rs  cache.rs  coalescing.rs  errors.rs  handlers.rs  lib.rs  limits.rs  main.rs  metrics.rs  models.rs  router.rs  scheduler.rs  state.rs
src/backend/: mock.rs  mod.rs  openai.rs
tests/: chat_api.rs
