[package]
name = "rust-llm-inference-gateway"
version = "1.0.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "macros"] }
futures-util = "0.3"
prometheus = "0.13"
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
